--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.6",
     "angular-cli": "^1.0.0-beta.28.3",
     "rxjs": "~6.5.5",
+    "stencil-market": "0.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
